# claude-zombies

./: .gitignore  CMakeLists.txt  HANDOFF.md  README.md  TODO.md
.claude/skills/blender-game-asset/: SKILL.md
.claude/skills/blender-game-asset/scripts/: check_asset.py
.github/workflows/: ci.yml
cmake/: patch_raylib_obj.cmake
data/: ANIMATIONS.md
data/maps/: default.map  factory.map  multifloor.map  nacht.map  navtest_dtu.map  navtest_xramp.map  textest.map
data/models/: ASSETS.md  arms_vm.glb  board.mtl  door.mtl  obstacle_barrel.mtl  pap_machine.mtl  perk_staminup.mtl  player.glb  player_m.mtl  sandbag_stack.mtl  wallbuy_panel.mtl  zombie.glb  zombie.mtl
data/shaders/: postfx.fs  sky.fs  world.fs  world_skinned.vs
data/weapons/pistol/: pistol.mtl  pistol.weapon  pistol_vm.glb
data/weapons/raygun/: raygun.mtl  raygun.weapon
data/weapons/rifle/: rifle.mtl  rifle.weapon
data/weapons/shotgun/: shotgun.mtl  shotgun.weapon
data/weapons/smg/: smg.weapon  smg_vm.blend  smg_vm.glb
docs/: arms-rig-generalisation.md  content-packs.md  editor-content-extensibility.md  editor-feature-ideas.md  editor-launcher-plan.md  editor-layout-audit.md  editor-textured-rendering-plan.md  editor-todo.md  editor-ux-review.md  engine-game-separation.md  engine-layers.md  engine-roadmap.md  engine-usage.md  game-projects.md  multi-floor-maps.md  pack-a-punch-spec.md  scene-builder.md  voice-chat.md
games/shooter/: game.project
games/shooter/maps/: default.map  factory.map  navtest_dtu.map
games/shooter/models/: mystery_box.mtl
games/shooter/src/: CMakeLists.txt  assets.h  audio_director.c  game.c  hud.c  level.c  main.c  mobs.h  player.c  props.c  viewmodel.c  viewmodel.h
packs/zombies/: pack.manifest
packs/zombies/models/: pap_machine.mtl  perk_double_tap.mtl  zombie.glb
packs/zombies/perks/juggernog/: juggernog.perk
packs/zombies/perks/staminup/: staminup.perk
scripts/: check-seam.sh
scripts/hooks/: pre-commit
src/: anim.c  anim.h  assets.c  assets.h  audio.c  audio.h  audio_director.c  audio_director.h  decals.h  devtools.c  entities.c  entities.h  fx.c  fx.h  game.c  game.h  hud.c  hud.h  interact.c  interact.h  level.c  level.h  main.c  mapdoc.c  mapdoc.h  menu.c  menu.h  net.c  net.h  pad.h  particles.h  perks.c  perks.h  player.c  player.h  protocol.c  protocol.h  render.c  render.h  settings.c  (+8 more)
src/editor/: builtins.c  builtins.h  builtins_internal.h  ed_recents.c  edassets.c  edassets.h  edcatalog.c  edfiledialog.c  edfiledialog.h  edhost.c  edhost.h  edimport.c  edimport.h  editor_main.c  edlauncher.c  edlauncher.h  edmat.c  edmenus.c  edpanels.c  edplace.c  edproject.c  edproject.h  edscene.c  edscene.h  edscene_internal.h  edsettings.c  edthumb.c  edthumb.h  panel_inspector.c
src/editor/plugins/: example_plugin.c
src/engine/: anim.c  anim.h  app.c  app.h  audio.c  audio_capture.c  audio_capture.h  audio_voice.c  audio_voice.h  cfg.c  cfg.h  collide.c  collide.h  content.c  content.h  debugdraw.c  debugdraw.h  decals.c  decals.h  deffile.c  deffile.h  eng_render.c  eng_render.h  gfx.c  gfx.h  gizmo.c  gizmo.h  mapdoc.c  mapdoc.h  mapedit.c  mapedit.h  net.c  net.h  pack.c  pack.h  pad.c  pad.h  particles.c  particles.h  pick.c  (+7 more)
src/engine/plugins/: voice_plugin.c
src/engine/tools/: eng_ui.c  eng_ui.h
src/game/: assets.c  assets.h  audio_director.c  devtools.c  devtools.h  entities.c  entities.h  level.c  main.c  menu.c  menu.h  mob_ai.c  mob_ai.h  mobs.c  perks.c  perks.h  props.h  protocol.c  render.c  render.h  settings.c  settings.h  types.h  viewmodel.c  viewmodel.h  weapons.c  world.h
stdlib/: ANIMATIONS.md
stdlib/mobs/zombie/: zombie.mob
stdlib/models/: ASSETS.md  anim_test.glb  door_frame.mtl  obstacle_crate.mtl  powerup_drop.mtl
stdlib/props/obstacle_barrel/: obstacle_barrel.prop
stdlib/shaders/: sky.vs  world.vs
stdlib/weapons/smg/: smg.mtl  smg_vm.glb
